--- a/backend-tasks.vault/vercel.json
+++ b/backend-tasks.vault/vercel.json
@@ -1,15 +1,14 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "app.js",
-            "use": "@now/node"
-        }
+        { 
+            "src": "*.js", 
+            "use": "@vercel/node" }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js"
+            "dest": "/"
         }
     ]
 }
